Updated pt_BR translations.
(Old svn revision: 20945)

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-15 08:45+0900\n"
-"PO-Revision-Date: 2006-03-31 17:49-0300\n"
+"PO-Revision-Date: 2006-04-15 17:23-0300\n"
 "Last-Translator: Adriano Winter Bess <awbess@gmail.com>\n"
 "Language-Team: os-cillation <info@os-cillation.com>\n"
 "MIME-Version: 1.0\n"
@@ -144,12 +144,11 @@ msgstr "A largura usada para cada item"
 
 #: ../exo/exo-icon-view.c:728
 msgid "Layout mode"
-msgstr ""
+msgstr "Modo de leiaute"
 
 #: ../exo/exo-icon-view.c:729
-#, fuzzy
 msgid "The layout mode"
-msgstr "O modo de seleção"
+msgstr "O modo de leiaute"
 
 #: ../exo/exo-icon-view.c:745
 msgid "Margin"
@@ -224,15 +223,16 @@ msgid "Whether the items in the view can be activated with single clicks"
 msgstr "Se os itens da visão podem ser ativados com cliques únicos"
 
 #: ../exo/exo-icon-view.c:903 ../exo/exo-tree-view.c:186
-#, fuzzy
 msgid "Single Click Timeout"
-msgstr "Clique Único"
+msgstr "Tempo de Clique Único"
 
 #: ../exo/exo-icon-view.c:904 ../exo/exo-tree-view.c:187
 msgid ""
 "The amount of time after which the item under the mouse cursor will be "
 "selected automatically in single click mode"
 msgstr ""
+"A quantidade de tempo após a qual o item sob o ponteiro do mouse será "
+"selecionado automaticamente em modo de clique único"
 
 #: ../exo/exo-icon-view.c:919
 msgid "Spacing"
@@ -240,7 +240,7 @@ msgstr "Espaçamento"
 
 #: ../exo/exo-icon-view.c:920
 msgid "Space which is inserted between cells of an item"
-msgstr "Espaço que é inserido entre células de um ítem"
+msgstr "Espaço que é inserido entre células de um item"
 
 #: ../exo/exo-icon-view.c:943
 msgid "Selection Box Color"
@@ -427,7 +427,7 @@ msgstr ""
 #: ../exo-csource/main.c:255 ../exo-open/main.c:107
 #, c-format
 msgid "Please report bugs to <%s>.\n"
-msgstr "Por favor, relate bugs para <%s>.\n"
+msgstr "Por favor, relate problemas para <%s>.\n"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:120
 #: ../exo-helper/exo-helper-chooser-dialog.c:129
@@ -451,8 +451,8 @@ msgid ""
 "The preferred Web Browser will be used to open\n"
 "hyperlinks and display help contents."
 msgstr ""
-"O Navegador Web padrão será usado para abrir\n"
-" ponteiros e mostrar o conteúdo da ajuda."
+"O Navegador Web preferido será usado para abrir\n"
+"ponteiros e mostrar o conteúdo da ajuda."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:193
 msgid "Default Mail Reader"
