2006-04-16	Benedikt Meurer <benny@xfce.org>
	* NEWS: Update NEWS file for BETA1.
	* HACKING: Fix repository URL.
	* exo.spec.in, Makefile.am, configure.in.in: Drop spec file, as it is
	  totally outdated and unmaintained.




(Old svn revision: 20951)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-04-16	Benedikt Meurer <benny@xfce.org>
+
+	* NEWS: Update NEWS file for BETA1.
+	* HACKING: Fix repository URL.
+	* exo.spec.in, Makefile.am, configure.in.in: Drop spec file, as it is
+	  totally outdated and unmaintained.
+
 2006-04-15	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c(exo_icon_view_layout_single_col): Apply patch
