2006-04-16	Benedikt Meurer <benny@xfce.org>
	* docs/manual/C/exo-preferred-applications.xml.in: Update the
	  documentation date.




(Old svn revision: 20953)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-04-16	Benedikt Meurer <benny@xfce.org>
 
+	* docs/manual/C/exo-preferred-applications.xml.in: Update the
+	  documentation date.
+
+2006-04-16	Benedikt Meurer <benny@xfce.org>
+
 	* NEWS: Update NEWS file for BETA1.
 	* HACKING: Fix repository URL.
 	* exo.spec.in, Makefile.am, configure.in.in: Drop spec file, as it is
