hu trunk: libexo updates
(Old svn revision: 20962)

--- a/po/hu.po
+++ b/po/hu.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-15 08:45+0900\n"
-"PO-Revision-Date: 2006-04-14 20:54+0100\n"
+"PO-Revision-Date: 2006-04-16 08:42+0100\n"
 "Last-Translator: SZERVÑC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian\n"
 "MIME-Version: 1.0\n"
@@ -19,9 +19,7 @@ msgid "Ellipsize"
 msgstr ""
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:153
-msgid ""
-"The preferred place to ellipsize the string, if the cell renderer does not "
-"have enough room to display the entire string, if at all"
+msgid "The preferred place to ellipsize the string, if the cell renderer does not have enough room to display the entire string, if at all"
 msgstr ""
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:163
@@ -33,164 +31,171 @@ msgid "Whether this tag affects the ellipsize mode"
 msgstr ""
 
 #: ../exo/exo-ellipsized-label.c:123
-msgid ""
-"The preferred place to ellipsize the string, if the label does not have "
-"enough room to display the entire string, if at all"
+msgid "The preferred place to ellipsize the string, if the label does not have enough room to display the entire string, if at all"
 msgstr ""
 
-#: ../exo/exo-icon-bar.c:259 ../exo/exo-icon-view.c:791
+#: ../exo/exo-icon-bar.c:259
+#: ../exo/exo-icon-view.c:791
 msgid "Orientation"
-msgstr ""
+msgstr "Irány"
 
 #: ../exo/exo-icon-bar.c:260
 msgid "The orientation of the iconbar"
-msgstr ""
+msgstr "Az ikonsáv iránya"
 
-#: ../exo/exo-icon-bar.c:276 ../exo/exo-icon-view.c:808
+#: ../exo/exo-icon-bar.c:276
+#: ../exo/exo-icon-view.c:808
 msgid "Pixbuf column"
-msgstr ""
+msgstr "Kép oszlop"
 
-#: ../exo/exo-icon-bar.c:277 ../exo/exo-icon-view.c:809
+#: ../exo/exo-icon-bar.c:277
+#: ../exo/exo-icon-view.c:809
 msgid "Model column used to retrieve the icon pixbuf from"
-msgstr ""
+msgstr "Modell oszlop az ikon képek behozására innen:"
 
-#: ../exo/exo-icon-bar.c:292 ../exo/exo-icon-view.c:935
+#: ../exo/exo-icon-bar.c:292
+#: ../exo/exo-icon-view.c:935
 msgid "Text column"
-msgstr ""
+msgstr "Szöveg oszlop"
 
-#: ../exo/exo-icon-bar.c:293 ../exo/exo-icon-view.c:936
+#: ../exo/exo-icon-bar.c:293
+#: ../exo/exo-icon-view.c:936
 msgid "Model column used to retrieve the text from"
-msgstr ""
+msgstr "Modell oszlop a szövegek behozására innen:"
 
 #: ../exo/exo-icon-bar.c:305
 msgid "Icon Bar Model"
-msgstr ""
+msgstr "Ikonsáv modell"
 
 #: ../exo/exo-icon-bar.c:306
 msgid "Model for the icon bar"
-msgstr ""
+msgstr "Az ikonsáv modellje"
 
 #: ../exo/exo-icon-bar.c:322
 msgid "Active"
-msgstr ""
+msgstr "Aktív"
 
 #: ../exo/exo-icon-bar.c:323
 msgid "Active item index"
-msgstr ""
+msgstr "Aktív elem index"
 
-#: ../exo/exo-icon-bar.c:329 ../exo/exo-icon-bar.c:330
+#: ../exo/exo-icon-bar.c:329
+#: ../exo/exo-icon-bar.c:330
 msgid "Active item fill color"
-msgstr ""
+msgstr "Aktív elem kitöltő szín"
 
-#: ../exo/exo-icon-bar.c:336 ../exo/exo-icon-bar.c:337
+#: ../exo/exo-icon-bar.c:336
+#: ../exo/exo-icon-bar.c:337
 msgid "Active item border color"
-msgstr ""
+msgstr "Aktív elem keret szín"
 
-#: ../exo/exo-icon-bar.c:343 ../exo/exo-icon-bar.c:344
+#: ../exo/exo-icon-bar.c:343
+#: ../exo/exo-icon-bar.c:344
 msgid "Active item text color"
-msgstr ""
+msgstr "Aktív elem szöveg szín"
 
-#: ../exo/exo-icon-bar.c:350 ../exo/exo-icon-bar.c:351
+#: ../exo/exo-icon-bar.c:350
+#: ../exo/exo-icon-bar.c:351
 msgid "Cursor item fill color"
-msgstr ""
+msgstr "Kurzor elem kitöltő szín"
 
-#: ../exo/exo-icon-bar.c:357 ../exo/exo-icon-bar.c:358
+#: ../exo/exo-icon-bar.c:357
+#: ../exo/exo-icon-bar.c:358
 msgid "Cursor item border color"
-msgstr ""
+msgstr "Kurzor elem keret szín"
 
-#: ../exo/exo-icon-bar.c:364 ../exo/exo-icon-bar.c:365
+#: ../exo/exo-icon-bar.c:364
+#: ../exo/exo-icon-bar.c:365
 msgid "Cursor item text color"
-msgstr ""
+msgstr "Kurzor elem szöveg szín"
 
 #: ../exo/exo-icon-view.c:659
 msgid "Column Spacing"
-msgstr ""
+msgstr "Oszloptáv"
 
 #: ../exo/exo-icon-view.c:660
 msgid "Space which is inserted between grid column"
-msgstr ""
+msgstr "A rácsos oszlopok közti táv"
 
 #: ../exo/exo-icon-view.c:676
 msgid "Number of columns"
-msgstr ""
+msgstr "Oszlopok száma"
 
 #: ../exo/exo-icon-view.c:677
 msgid "Number of columns to display"
-msgstr ""
+msgstr "Kiírandó oszlopok száma"
 
 #: ../exo/exo-icon-view.c:691
 msgid "Enable Search"
-msgstr ""
+msgstr "Keresés engedélyezése"
 
 #: ../exo/exo-icon-view.c:692
 msgid "View allows user to search through columns interactively"
-msgstr ""
+msgstr "Engedélyezi az oszlopok közti keresést a nézetben"
 
 #: ../exo/exo-icon-view.c:709
 msgid "Width for each item"
-msgstr ""
+msgstr "Az elemek szélessége"
 
 #: ../exo/exo-icon-view.c:710
 msgid "The width used for each item"
-msgstr ""
+msgstr "Az elemekhez használt szélesség"
 
 #: ../exo/exo-icon-view.c:728
 msgid "Layout mode"
-msgstr ""
+msgstr "Elrendezés mód"
 
 #: ../exo/exo-icon-view.c:729
-#, fuzzy
 msgid "The layout mode"
-msgstr "A kijelölés módja"
+msgstr "Elrendezési mód"
 
 #: ../exo/exo-icon-view.c:745
 msgid "Margin"
-msgstr ""
+msgstr "Margó"
 
 #: ../exo/exo-icon-view.c:746
 msgid "Space which is inserted at the edges of the icon view"
-msgstr ""
+msgstr "Az ikon nézet széleinél használt hely"
 
 #: ../exo/exo-icon-view.c:762
 msgid "Markup column"
-msgstr ""
+msgstr "Leíró oszlop"
 
 #: ../exo/exo-icon-view.c:763
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr ""
+msgstr "A szöveg behozására használt modell oszlop Pango használatakor"
 
 #: ../exo/exo-icon-view.c:777
 msgid "Icon View Model"
-msgstr ""
+msgstr "Ikon nézet modell"
 
 #: ../exo/exo-icon-view.c:778
 msgid "The model for the icon view"
-msgstr ""
+msgstr "Az ikon nézet modellje"
 
 #: ../exo/exo-icon-view.c:792
-msgid ""
-"How the text and icon of each item are positioned relative to each other"
-msgstr ""
+msgid "How the text and icon of each item are positioned relative to each other"
+msgstr "A szöveg és ikon egymáshoz való viszonya"
 
 #: ../exo/exo-icon-view.c:824
 msgid "Reorderable"
-msgstr ""
+msgstr "Átrendezhető"
 
 #: ../exo/exo-icon-view.c:825
 msgid "View is reorderable"
-msgstr ""
+msgstr "A nézet átrendezhető"
 
 #: ../exo/exo-icon-view.c:840
 msgid "Row Spacing"
-msgstr ""
+msgstr "Sortáv"
 
 #: ../exo/exo-icon-view.c:841
 msgid "Space which is inserted between grid rows"
-msgstr ""
+msgstr "A rácsos sorok közti táv"
 
 #: ../exo/exo-icon-view.c:855
 msgid "Search Column"
-msgstr ""
+msgstr "Kereső oszlop"
 
 #: ../exo/exo-icon-view.c:856
 msgid "Model column to search through when searching through item"
@@ -204,25 +209,25 @@ msgstr "Kijelölés mód"
 msgid "The selection mode"
 msgstr "A kijelölés módja"
 
-#: ../exo/exo-icon-view.c:886 ../exo/exo-tree-view.c:169
+#: ../exo/exo-icon-view.c:886
+#: ../exo/exo-tree-view.c:169
 msgid "Single Click"
 msgstr "Egy-kattintás"
 
-#: ../exo/exo-icon-view.c:887 ../exo/exo-tree-view.c:170
+#: ../exo/exo-icon-view.c:887
+#: ../exo/exo-tree-view.c:170
 msgid "Whether the items in the view can be activated with single clicks"
 msgstr "Az elem egy-kattintásra aktiválódjon-e a nézetben"
 
-#: ../exo/exo-icon-view.c:903 ../exo/exo-tree-view.c:186
+#: ../exo/exo-icon-view.c:903
+#: ../exo/exo-tree-view.c:186
 msgid "Single Click Timeout"
 msgstr "Egy-kattintós késleltetés"
 
-#: ../exo/exo-icon-view.c:904 ../exo/exo-tree-view.c:187
-msgid ""
-"The amount of time after which the item under the mouse cursor will be "
-"selected automatically in single click mode"
-msgstr ""
-"Az idő, mely egy elem kijelöléséig tart, ha ráhúzod az egeret egy-kattintós "
-"módban"
+#: ../exo/exo-icon-view.c:904
+#: ../exo/exo-tree-view.c:187
+msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
+msgstr "Az idő, mely egy elem kijelöléséig tart, ha ráhúzod az egeret egy-kattintós módban"
 
 #: ../exo/exo-icon-view.c:919
 msgid "Spacing"
@@ -253,12 +258,8 @@ msgid "_Add a new toolbar"
 msgstr "Új eszközsáv hozzá_adása"
 
 #: ../exo/exo-toolbars-editor.c:238
-msgid ""
-"Drag an item onto the toolbars above to add it, from the toolbars in the "
-"items table to remove it."
-msgstr ""
-"Húzz egy elemet az eszközsávok fölé hozzáadáshoz, és róluk az elemek "
-"táblájába eltávolításukhoz."
+msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
+msgstr "Húzz egy elemet az eszközsávok fölé hozzáadáshoz, és róluk az elemek táblájába eltávolításukhoz."
 
 #: ../exo/exo-toolbars-editor.c:551
 msgid "Separator"
@@ -333,11 +334,11 @@ msgstr "Homogén"
 
 #: ../exo/exo-wrap-table.c:200
 msgid "Whether the children should be all the same size"
-msgstr ""
+msgstr "A gyermekek ugyanakkorák legyenek-e"
 
 #: ../exo/exo-xsession-client.c:152
 msgid "Window group"
-msgstr ""
+msgstr "Ablak csoport"
 
 #: ../exo/exo-xsession-client.c:153
 msgid "Window group leader"
@@ -345,29 +346,29 @@ msgstr ""
 
 #: ../exo/exo-xsession-client.c:163
 msgid "Restart command"
-msgstr ""
+msgstr "Újraindító parancs"
 
 #: ../exo/exo-xsession-client.c:164
 msgid "Session restart command"
-msgstr ""
+msgstr "Folyamat újraindító parancs"
 
 #: ../exo-csource/main.c:230
 #, c-format
 msgid "Usage: %s [options] [file]\n"
-msgstr ""
+msgstr "Használat: %s [lehetőségek] [fájl]\n"
 
 #: ../exo-csource/main.c:231
 #, c-format
 msgid "       %s [options] --build-list [[name file]...]\n"
-msgstr ""
+msgstr "       %s [opciók] --build-list [[név fájl]...]\n"
 
 #: ../exo-csource/main.c:233
 msgid "  -h, --help        Print this help message and exit\n"
-msgstr ""
+msgstr "  -h, --help        Kiírja e súgót és kilép\n"
 
 #: ../exo-csource/main.c:234
 msgid "  -v, --version     Print version information and exit\n"
-msgstr ""
+msgstr "  -v, --version     Kiírja a verzió információt és kilép\n"
 
 #: ../exo-csource/main.c:235
 msgid "  --extern          Generate extern symbols\n"
@@ -375,15 +376,15 @@ msgstr ""
 
 #: ../exo-csource/main.c:236
 msgid "  --static          Generate static symbols\n"
-msgstr ""
+msgstr "  --static          Statikus szimbólumokat készít\n"
 
 #: ../exo-csource/main.c:237
 msgid "  --name=identifier C macro/variable name\n"
-msgstr ""
+msgstr "  --name=identifier C makró/változó név\n"
 
 #: ../exo-csource/main.c:238
 msgid "  --build-list      Parse (name, file) pairs\n"
-msgstr ""
+msgstr "  --build-list      Értelmezi a (név, fájl) párokat\n"
 
 #: ../exo-csource/main.c:248
 msgid ""
@@ -399,7 +400,8 @@ msgstr ""
 "Írta Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 
-#: ../exo-csource/main.c:251 ../exo-open/main.c:103
+#: ../exo-csource/main.c:251
+#: ../exo-open/main.c:103
 #, c-format
 msgid ""
 "%s comes with ABSOLUTELY NO WARRANTY,\n"
@@ -414,7 +416,8 @@ msgstr ""
 "%s forrás csomagban lelsz.\n"
 "\n"
 
-#: ../exo-csource/main.c:255 ../exo-open/main.c:107
+#: ../exo-csource/main.c:255
+#: ../exo-open/main.c:107
 #, c-format
 msgid "Please report bugs to <%s>.\n"
 msgstr "Kérjük, jelentsd nekünk a hibákat itt: <%s>.\n"
@@ -682,20 +685,16 @@ msgid "  -h, --help                          Print this help message and exit"
 msgstr "  -h, --help                          Kiírja e súgót és kilép"
 
 #: ../exo-open/main.c:47
-msgid ""
-"  -v, --version                       Print version information and exit"
-msgstr ""
-"  -v, --version                       Kiírja a verzió információt és kilép"
+msgid "  -v, --version                       Print version information and exit"
+msgstr "  -v, --version                       Kiírja a verzió információt és kilép"
 
 #: ../exo-open/main.c:49
 msgid ""
 "  --launch TYPE [PARAMETERs...]       Launch the preferred application of\n"
-"                                      TYPE with the optional PARAMETERs, "
-"where\n"
+"                                      TYPE with the optional PARAMETERs, where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
-"  --launch TÍPUS [PARAMÉTERek...]     A TÍPUShoz társított alkalmazást "
-"futtatja\n"
+"  --launch TÍPUS [PARAMÉTERek...]     A TÍPUShoz társított alkalmazást futtatja\n"
 "                                      lehetséges PARAMÉTERekkel, ahol a\n"
 "                                      TÍPUS az alábbiak egyike."
 
@@ -753,3 +752,4 @@ msgstr "\"%s\" kategóriához tartozó alkalmazás indítása sikertelen"
 #, c-format
 msgid "Failed to open URL \"%s\"."
 msgstr "\"%s\" URL megnyitása sikertelen"
+
