[i18n] catalan Little fix in libexo
(Old svn revision: 20963)

--- a/po/ca.po
+++ b/po/ca.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-15 08:45+0900\n"
-"PO-Revision-Date: 2006-04-02 17:59+0200\n"
+"PO-Revision-Date: 2006-04-15 21:03+0200\n"
 "Last-Translator: Pau Rul·lan Ferragut <paurullan@bulma.net>\n"
 "Language-Team: Catalan\n"
 "MIME-Version: 1.0\n"
@@ -145,12 +145,11 @@ msgstr "L'amplada utilitzada per cada element"
 
 #: ../exo/exo-icon-view.c:728
 msgid "Layout mode"
-msgstr ""
+msgstr "Mode del format"
 
 #: ../exo/exo-icon-view.c:729
-#, fuzzy
 msgid "The layout mode"
-msgstr "El mode de selecció"
+msgstr "El mode del format"
 
 #: ../exo/exo-icon-view.c:745
 msgid "Margin"
@@ -223,15 +222,14 @@ msgid "Whether the items in the view can be activated with single clicks"
 msgstr "Si els elements de la vista poden ser activats amb un sol clic"
 
 #: ../exo/exo-icon-view.c:903 ../exo/exo-tree-view.c:186
-#, fuzzy
 msgid "Single Click Timeout"
-msgstr "Clic senzill"
+msgstr "Temps d'espera pel clic senzill"
 
 #: ../exo/exo-icon-view.c:904 ../exo/exo-tree-view.c:187
 msgid ""
 "The amount of time after which the item under the mouse cursor will be "
 "selected automatically in single click mode"
-msgstr ""
+msgstr "El temps que transcorrirà quan el cursor estigui sobre un element que s'hagi seleccionat automàticament al mode de clic senzill."
 
 #: ../exo/exo-icon-view.c:919
 msgid "Spacing"
