2006-04-16	Benedikt Meurer <benny@xfce.org>
	* po/libexo-0.3.pot, po/*.po: Updated.




(Old svn revision: 20967)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-04-16	Benedikt Meurer <benny@xfce.org>
 
+	* po/libexo-0.3.pot, po/*.po: Updated.
+
+2006-04-16	Benedikt Meurer <benny@xfce.org>
+
 	* configure.in.in: Check for sys/wait.h.
 	* exo-helper/exo-helper.c: Properly retry with the remaining commands
 	  if a command returns with an error within 5 seconds. This finally
