--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-16  Benedikt Meurer <benny@xfce.org>
+
+	* libexo-0.3.pot, *.po: Updated.
+
 2006-04-16  Daichi Kawahata <daichi@xfce.org>
 
 	* ru.po: Updated Russian translations by Andrey Fedoseev
