2006-04-16	Benedikt Meurer <benny@xfce.org>
	* === Released 0.3.1.6beta1 ===
	* NEWS, configure.in.in: Bump version.
	* configure.in.in: Depend on Xfce 4.2.2 or above.
	* Makefile.am, exo.spec.in, configure.in.in: Readd fixed exo.spec.in
	  file for RPM building.




(Old svn revision: 20999)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2006-04-16	Benedikt Meurer <benny@xfce.org>
 
+	* === Released 0.3.1.6beta1 ===
+	* NEWS, configure.in.in: Bump version.
+	* configure.in.in: Depend on Xfce 4.2.2 or above.
+	* Makefile.am, exo.spec.in, configure.in.in: Readd fixed exo.spec.in
+	  file for RPM building.
+
+2006-04-16	Benedikt Meurer <benny@xfce.org>
+
 	* po/libexo-0.3.pot, po/*.po: Updated.
 
 2006-04-16	Benedikt Meurer <benny@xfce.org>
