--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-0.3.1.5svn
-==========
+0.3.1.6beta1
+============
 - Imported the "Xfce Preferred Applications" framework, which allows users to
   select their preferred applications (i.e. web browser, mail reader, terminal
   emulator) using a nice graphical interface, rather than having to figure out
