--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-04-16	Benedikt Meurer <benny@xfce.org>
 
+	* configure.in.in: Post-release version bump.
+
+2006-04-16	Benedikt Meurer <benny@xfce.org>
+
 	* === Released 0.3.1.6beta1 ===
 	* NEWS, configure.in.in: Bump version.
 	* configure.in.in: Depend on Xfce 4.2.2 or above.
