--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-17	Benedikt Meurer <benny@xfce.org>
+
+	* exo-helper/exo-helper.c(exo_helper_execute): Finally fix the helper
+	  command execution.
+
 2006-04-16	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in: Post-release version bump.
