2006-04-19	Benedikt Meurer <benny@xfce.org>
	* exo-helper/exo-preferred-applications-settings.c(mcs_plugin_init):
	  Mark button label translation. Bug #1669.
	* po/libexo-0.3.pot, po/*.po: Update translations.




(Old svn revision: 21083)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-04-19	Benedikt Meurer <benny@xfce.org>
+
+	* exo-helper/exo-preferred-applications-settings.c(mcs_plugin_init):
+	  Mark button label translation. Bug #1669.
+	* po/libexo-0.3.pot, po/*.po: Update translations.
+
 2006-04-17	Benedikt Meurer <benny@xfce.org>
 
 	* exo-helper/exo-helper.c(exo_helper_execute): Finally fix the helper
