--- a/po/ja.po
+++ b/po/ja.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.5svn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-04-16 09:24+0200\n"
+"POT-Creation-Date: 2006-04-19 17:57+0200\n"
 "PO-Revision-Date: 2006-04-15 11:34+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
@@ -430,7 +430,6 @@ msgstr "バグは <%s> に報告して下さい。\n"
 # FIXME: Preferred, how it should be?
 #: ../exo-helper/exo-helper-chooser-dialog.c:120
 #: ../exo-helper/exo-helper-chooser-dialog.c:129
-#: ../exo-helper/exo-preferred-applications-settings.c:62
 msgid "Preferred Applications"
 msgstr "常用アプリケーション"
 
@@ -615,6 +614,12 @@ msgstr "書き込むために helpers.rc を開くのに失敗しました"
 #: ../exo-helper/exo-preferred-applications-settings.c:40
 msgid "Failed to launch exo-preferred-applications"
 msgstr "コマンド exo-preferred-applications を実行するのに失敗しました"
+
+# FIXME: Preferred, how it should be?
+#: ../exo-helper/exo-preferred-applications-settings.c:60
+#, fuzzy
+msgid "Button Label|Preferred Applications"
+msgstr "常用アプリケーション"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.h:1
 msgid "Xfce Terminal"
