[l10n:eu] Basque translation update
(Old svn revision: 21129)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-19  Piarres Beobide <pi@beobide.net>
+
+	* eu.po: Basque translation update
+
 2006-04-19  Benedikt Meurer <benny@xfce.org>
 
 	* libexo-0.3.pot, *.po: Updated.
