--- a/po/eu.po
+++ b/po/eu.po
@@ -128,7 +128,7 @@ msgstr "Bistaraziko diren zutabe kopurua"
 
 #: ../exo/exo-icon-view.c:691
 msgid "Enable Search"
-msgstr "Bailketa Galitu"
+msgstr "Bilaketa Gaitu"
 
 #: ../exo/exo-icon-view.c:692
 msgid "View allows user to search through columns interactively"
@@ -146,12 +146,11 @@ msgstr "Elementu bakoitzarentzat erabiliko den zabalera"
 
 #: ../exo/exo-icon-view.c:728
 msgid "Layout mode"
-msgstr ""
+msgstr "Aurkezpen modua"
 
 #: ../exo/exo-icon-view.c:729
-#, fuzzy
 msgid "The layout mode"
-msgstr "Aukeratze modua"
+msgstr "Aurkezpen modua"
 
 #: ../exo/exo-icon-view.c:745
 msgid "Margin"
@@ -225,15 +224,17 @@ msgid "Whether the items in the view can be activated with single clicks"
 msgstr "Honela ikuspegiko elementuak klika bakan batez aktibatu daitezke"
 
 #: ../exo/exo-icon-view.c:903 ../exo/exo-tree-view.c:186
-#, fuzzy
 msgid "Single Click Timeout"
-msgstr "Klik bakana"
+msgstr "Klik bakan denbora-muga"
 
 #: ../exo/exo-icon-view.c:904 ../exo/exo-tree-view.c:187
 msgid ""
 "The amount of time after which the item under the mouse cursor will be "
 "selected automatically in single click mode"
 msgstr ""
+"Klik bakaneko moduan kurtsorearen azpiko elementua automatikoki aukeratu "
+"pasa behar den denbora"
+
 
 #: ../exo/exo-icon-view.c:919
 msgid "Spacing"
@@ -607,9 +608,8 @@ msgid "Failed to launch exo-preferred-applications"
 msgstr "Huts exo-hobetsitako-aplikazioak abiarazterakoan"
 
 #: ../exo-helper/exo-preferred-applications-settings.c:60
-#, fuzzy
 msgid "Button Label|Preferred Applications"
-msgstr "Hobetsitako Aplikazioak"
+msgstr "Botoi Etiketak|Hobetsitako Aplikazioak"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.h:1
 msgid "Xfce Terminal"
