--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-23  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Updated Japanese translations.
+
 2006-04-19  Piarres Beobide <pi@beobide.net>
 
 	* eu.po: Basque translation update
