Updated Russian translations by Sergey Fedoseev <fedoseev.sergey@gmail.com>.
(Old svn revision: 21176)

--- a/po/ru.po
+++ b/po/ru.po
@@ -1,14 +1,14 @@
-# Russian translation of libexo package.
+# Russian translation for exo package.
 # Copyright (C) 2004-2006 os-cillation e.K.
-# This file is distributed under the same license as the libexo package.
+# This file is distributed under the same license as the exo package.
 # Andrey Fedoseev <andrey.fedoseev@gmail.com>, 2006.
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-19 17:57+0200\n"
-"PO-Revision-Date: 2006-03-13 22:02+0500\n"
+"PO-Revision-Date: 2006-04-15 18:33+0600\n"
 "Last-Translator: Andrey Fedoseev <andrey.fedoseev@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -42,11 +42,11 @@ msgstr ""
 
 #: ../exo/exo-icon-bar.c:259 ../exo/exo-icon-view.c:791
 msgid "Orientation"
-msgstr ""
+msgstr "Ориентация"
 
 #: ../exo/exo-icon-bar.c:260
 msgid "The orientation of the iconbar"
-msgstr ""
+msgstr "Ориентация панели значков"
 
 #: ../exo/exo-icon-bar.c:276 ../exo/exo-icon-view.c:808
 msgid "Pixbuf column"
@@ -404,12 +404,12 @@ msgstr ""
 #: ../exo-csource/main.c:255 ../exo-open/main.c:107
 #, c-format
 msgid "Please report bugs to <%s>.\n"
-msgstr ""
+msgstr "Сообщайте об ошибках на <%s>.\n"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:120
 #: ../exo-helper/exo-helper-chooser-dialog.c:129
 msgid "Preferred Applications"
-msgstr "Препочитаемые приложения"
+msgstr "Предпочтительные приложения"
 
 #.
 #. Internet
@@ -427,9 +427,8 @@ msgid ""
 "The preferred Web Browser will be used to open\n"
 "hyperlinks and display help contents."
 msgstr ""
-"Предпочитаемый веб-браузер, который будет\n"
-"использован для открытия гиперссылок и просмотра\n"
-"справки."
+"Выбранный веб-браузер будет использоваться для\n"
+"открытия гиперссылок и просмотра справки."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:193
 msgid "Default Mail Reader"
@@ -440,9 +439,9 @@ msgid ""
 "The preferred Mail Reader will be used to compose\n"
 "emails when you click on email addresses."
 msgstr ""
-"Предпочитаемая почтовая программа, котороя будет\n"
-"использована для составления писем при нажатии на\n"
-"на почтовый адрес."
+"Выбранная почтовая программа будет использоваться\n"
+"для составления писем при нажатии на почтовый\n"
+"адрес."
 
 #.
 #. Utilities
@@ -460,9 +459,9 @@ msgid ""
 "The preferred Terminal Emulator will be used to\n"
 "run commands that require a CLI environment."
 msgstr ""
-"Предпочитаемый эмулятор терминала, который будет\n"
-"использоваться для запуска команд, которым требуется\n"
-"окружение командной строки."
+"Выбранный эмулятор терминала будет использоваться\n"
+"для запуска команд, которым требуется окружение\n"
+"командной строки."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:296
 #: ../exo-helper/exo-helper-launcher-dialog.c:260
@@ -557,24 +556,24 @@ msgid ""
 "Please choose your preferred Web\n"
 "Browser now and click OK to proceed."
 msgstr ""
-"Пожалуйста, выберите предпочитаемый веб-браузер и нажмите OK, чтобы "
-"продолжить."
+"Пожалуйста, выберите предпочитаемый\n"
+"веб-браузер и нажмите OK, чтобы продолжить."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:321
 msgid ""
 "Please choose your preferred Mail Reader\n"
 "now and click OK to proceed."
 msgstr ""
-"Пожалуйста, выберите предпочитаемую почтовую программу и нажмите OK, чтобы "
-"продолжить."
+"Пожалуйста, выберите предпочитаемую почтовую\n"
+"программу и нажмите OK, чтобы продолжить."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:323
 msgid ""
 "Please choose your preferred Terminal\n"
 "Emulator now and click OK to proceed."
 msgstr ""
-"Пожалуйста, выберите предпочитаемый эмулятор терминала и нажмите OK, чтобы "
-"продолжить."
+"Пожалуйста, выберите предпочитаемый эмулятор\n"
+"терминала и нажмите OK, чтобы продолжить."
 
 #: ../exo-helper/exo-helper.c:404
 msgid "No command specified"
@@ -589,9 +588,8 @@ msgid "Failed to launch exo-preferred-applications"
 msgstr "Не удалось запустить exo-preferred-applications"
 
 #: ../exo-helper/exo-preferred-applications-settings.c:60
-#, fuzzy
 msgid "Button Label|Preferred Applications"
-msgstr "Препочитаемые приложения"
+msgstr "Предпочтительные приложения"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.h:1
 msgid "Xfce Terminal"
