--- a/po/et.po
+++ b/po/et.po
@@ -1,20 +1,19 @@
-# translation of xfce4.
-# Copyright (C) 2006 THE xfce4'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the xfce4 package.
-# 21 april, 2006.
-# 
+# Estonian translations for exo package.
+# Copyright (C) 2004-2006 os-cillation e.K.
+# This file is distributed under the same license as the exo package.
+# Peeter Vois <peeter.vois@proekspert.ee>, 2006.
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4 4.4\n"
+"Project-Id-Version: exo 0.3.1.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-19 17:57+0200\n"
 "PO-Revision-Date: 2006-04-21 23:06+0300\n"
-"Last-Translator:  <>\n"
-"Language-Team:  <et@li.org>\n"
+"Last-Translator: Peeter Vois <peeter.vois@proekspert.ee>\n"
+"Language-Team: Estonian <et@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=\n"
-"Content-Transfer-Encoding: "
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:152
 #: ../exo/exo-ellipsized-label.c:122
@@ -42,8 +41,8 @@ msgid ""
 "The preferred place to ellipsize the string, if the label does not have "
 "enough room to display the entire string, if at all"
 msgstr ""
-"Eelistatud asukoht ellipseeritud kirjale, kui sildi jaoks ei ole  "
-"piisavalt ruumi, kui üldse on"
+"Eelistatud asukoht ellipseeritud kirjale, kui sildi jaoks ei ole  piisavalt "
+"ruumi, kui üldse on"
 
 #: ../exo/exo-icon-bar.c:259 ../exo/exo-icon-view.c:791
 msgid "Orientation"
@@ -163,7 +162,9 @@ msgstr "Ülesmärgistuse tulp"
 
 #: ../exo/exo-icon-view.c:763
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr "Mudeli tulp, mida kasutatakse teksti saamiseks kui Pango märgistus on kasutusel"
+msgstr ""
+"Mudeli tulp, mida kasutatakse teksti saamiseks kui Pango märgistus on "
+"kasutusel"
 
 #: ../exo/exo-icon-view.c:777
 msgid "Icon View Model"
@@ -176,8 +177,7 @@ msgstr "Ikooni vaate mudel"
 #: ../exo/exo-icon-view.c:792
 msgid ""
 "How the text and icon of each item are positioned relative to each other"
-msgstr ""
-"Kuidas asjade tekstid ja ikoonid on asetatud teineteise suhtes"
+msgstr "Kuidas asjade tekstid ja ikoonid on asetatud teineteise suhtes"
 
 #: ../exo/exo-icon-view.c:824
 msgid "Reorderable"
@@ -264,8 +264,8 @@ msgid ""
 "Drag an item onto the toolbars above to add it, from the toolbars in the "
 "items table to remove it."
 msgstr ""
-"Uue asja panemiseks nupuribale kanna see sinna. Et eemaldada "
-"siis kanna see sealt ära."
+"Uue asja panemiseks nupuribale kanna see sinna. Et eemaldada siis kanna see "
+"sealt ära."
 
 #: ../exo/exo-toolbars-editor.c:551
 msgid "Separator"
@@ -705,8 +705,8 @@ msgid ""
 "                                      TYPE is one of the following values."
 msgstr ""
 "  --launch TYPE [PARAMETERs...]       Käivita eelistatud rakendus\n"
-"                                      TYPE koos mittekohustuslike parameetritega (PARAMETER), "
-"kus\n"
+"                                      TYPE koos mittekohustuslike "
+"parameetritega (PARAMETER), kus\n"
 "                                      TYPE on üks järgnevatest väärtustest."
 
 #: ../exo-open/main.c:53
@@ -736,8 +736,10 @@ msgid ""
 msgstr ""
 "Kui te ei täpsusta --launch seadistust, siis exo-open avab kõik määratud\n"
 "URL-id nende eelistatud URL-i käsitlejatega. Kui aga te määratlete --launch\n"
-"seadistuse, siis te saate valida millist eelistatud rakendust te soovite käivitada\n"
-"ja te saate ka määrata täiendavaid parameetreid (näiteks: terminali emulaatori\n"
+"seadistuse, siis te saate valida millist eelistatud rakendust te soovite "
+"käivitada\n"
+"ja te saate ka määrata täiendavaid parameetreid (näiteks: terminali "
+"emulaatori\n"
 "jaoks te saate määrata käsurea, mida tuleb käivitada terminali käivitamisel)."
 
 #: ../exo-open/main.c:100
@@ -763,4 +765,3 @@ msgstr "Kategooria \"%s\" eelistatud rakenduse käivitamine läks nässu"
 #, c-format
 msgid "Failed to open URL \"%s\"."
 msgstr "URL-i \"%s\" avamine läks nässu"
-
