--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-29  Daichi Kawahata <daichi@xfce.org>
+
+	* et.po: Fixed.
+
 2006-04-23  Daichi Kawahata <daichi@xfce.org>
 
 	* ru.po: Updated Russian translations by Sergey Fedoseev
