--- a/po/hu.po
+++ b/po/hu.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.5svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-19 17:57+0200\n"
-"PO-Revision-Date: 2006-04-19 18:29+0100\n"
-"Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
+"PO-Revision-Date: 2006-04-30 17:25+0100\n"
+"Last-Translator: SZERVÑC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -601,7 +601,7 @@ msgstr "exo-preferred-applications futtatása sikertelen"
 
 #: ../exo-helper/exo-preferred-applications-settings.c:60
 msgid "Button Label|Preferred Applications"
-msgstr "Gomb cím|Kedvenc alkalmazások"
+msgstr "Kedvenc alkalmazások"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.h:1
 msgid "Xfce Terminal"
