--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-30  Daichi Kawahata <daichi@xfce.org>
+
+	* LINGUAS, pl.po: Added Polish translations by Piotr Malinski
+	  <admin@rk.edu.pl>.
+
 2006-04-29  Daichi Kawahata <daichi@xfce.org>
 
 	* et.po: Fixed.
